# Note that in maintenance branches, all build dependencies should
# have an upper bound equal to the most recent already-released version
# of the dependency. This to prevent that a future backwards-incompatible
# release will break the source build of a SciPy release.
# Do accept micro (bug-fix) releases. So for example, if pybind11 2.4.3 is
# the most recent version on PyPI:
#
#     "pybind11>=2.4.3,<2.5.0",
#
# Upper bounds in release branches must have notes on why they are added.
# Distro packages can ignore upper bounds added only to prevent future
# breakage; if we add pins or bounds because of known problems then they need
# them too.

# Run tools/generate_requirements.txt when making changes to any dependencies

[build-system]
build-backend = 'mesonpy'
# NOTE: when updating this table, also update `dependency-groups.build`
requires = [
    "meson-python>=0.15.0",
    "Cython>=3.2.0",        # when updating version, also update check in meson.build
    "pybind11>=2.13.2",     # when updating version, also update check in scipy/meson.build
    "pythran>=0.18.1",      # when updating version, also update check in meson.build
    "numpy>=2.0.0",
]

[project]
name = "scipy"
version = "1.19.0.dev0"
# TODO: add `license-files` once PEP 639 is accepted (see meson-python#88)
#       at that point, no longer include them in `py3.install_sources()`
license = { file = "LICENSE.txt" }
description = "Fundamental algorithms for scientific computing in Python"
maintainers = [
    { name = "SciPy Developers", email = "scipy@discuss.scientific-python.org" },
]
# Note: Python and NumPy upper version bounds should be set correctly in
# release branches, see:
#     https://scipy.github.io/devdocs/dev/core-dev/index.html#version-ranges-for-numpy-and-other-dependencies
requires-python = ">=3.12"  # keep in sync with `min_python_version` in meson.build
dependencies = [
    "numpy>=2.0.0",
] # keep in sync with `min_numpy_version` in meson.build
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
homepage = "https://scipy.org/"
documentation = "https://docs.scipy.org/doc/scipy/"
source = "https://github.com/scipy/scipy"
download = "https://pypi.org/project/scipy/"
install = "https://scipy.org/install/"
releasenotes = "https://docs.scipy.org/doc/scipy/release.html"
tracker = "https://github.com/scipy/scipy/issues"
developer-discussion = "https://discuss.scientific-python.org/c/contributor/scipy/"
user-discussion = "https://discuss.scientific-python.org/c/user/scipy/"

# NOTE: when updating this table, also update `dependency-groups.optional-runtime-deps`
[project.optional-dependencies]
all = [
    "pooch",  # datasets
    "threadpoolctl",  # io.mm{...}
    "matplotlib",  # cluster.hierarchy.dendrogram, stats.probplot
    # circular dependency issues, https://github.com/scipy/scipy/issues/19783
    # "scikit-umfpack",  # optimize, sparse.linalg
]

[dependency-groups]
optional-runtime-deps = [
    "pooch",  # datasets
    "threadpoolctl",  # io.mm{...}
    "matplotlib",  # cluster.hierarchy.dendrogram, stats.probplot
    # circular dependency issues, https://github.com/scipy/scipy/issues/19783
    # "scikit-umfpack",  # optimize, sparse.linalg
]

build = [
    "meson-python>=0.15.0",
    "Cython>=3.2.0",
    "pybind11>=2.13.2",
    "pythran>=0.18.1",
    "numpy>=2.0.0",
]

test-core = [
    "pytest>=8.0.0",
    "hypothesis>=6.30",
    "pooch",
    "pytest-xdist",  # not required, but used widely, belongs in -core
    "pytest-timeout",  # not required, but used widely, belongs in -core
]
test-mp = [
    "mpmath",
    # for PyPI: 'gmpy2; sys_platform != "win32" or platform_machine != "ARM64"'
    "gmpy2",
]
test-extending-cython = [  # {special, linalg, optimize}.tests.test_extending
    "Cython",
    "meson",
    'ninja; sys_platform != "emscripten"',
]
test-parallel = [
    { include-group = "test-core" },
    "pytest-run-parallel",
]
test-docs = [
    { include-group = "test-core" },
    "scipy-doctest>=2.0.0",
]
test-array-types = [
    { include-group = "test-core" },
    "array-api-strict>=2.3.1",
    "marray",
]
test = [
    { include-group = "optional-runtime-deps" },
    { include-group = "test-core" },
    { include-group = "test-mp" },
    { include-group = "test-extending-cython" },
    { include-group = "test-parallel" },
    { include-group = "test-docs" },
    { include-group = "test-array-types" },
    # useful but doesn't have its own group (rarely used, and has compiled wheels so can be hard to install)
    "psutil",
]
test-fail-slow = [
    { include-group = "test-core" },
    "pytest-fail-slow",  # only one CI job; isolated so it doesn't cause failures for contributors randomly
]
coverage = [
    { include-group = "test" },  # includes all optional test and runtime deps for maximum coverage
    "pytest-cov",
]

bench = [
    # https://github.com/airspeed-velocity/asv/issues/1537
    "asv==0.6.4",
]

doc = [
    "sphinx>=5.0.0,<8.2.0",
    "intersphinx_registry",
    "pydata-sphinx-theme>=0.15.2",
    "sphinx-copybutton",
    "sphinx-design>=0.4.0",
    "matplotlib>=3.5",
    "numpydoc",
    "jupytext",
    "myst-nb>=1.2.0",
    "pooch",
    "jupyterlite-sphinx>=0.19.1",
    "jupyterlite-pyodide-kernel",
    "linkify-it-py",
    "tabulate",
]

dev-cli = [
    "spin",
]

typecheck = [
    "mypy==1.19.1",
    "pyrefly==0.63.0",
    "typing_extensions",
    "types-psutil",
    "pybind11",
    "sphinx",
]

lint = [
    "ruff>=0.12.0",
    "cython-lint>=0.12.2",
    "packaging",
    "tach",
    "zizmor",
]

dev = [
    { include-group = "build" },
    { include-group = "test" },
    { include-group = "bench" },
    { include-group = "doc" },
    { include-group = "dev-cli" },
    { include-group = "typecheck" },
    { include-group = "lint" },
    "scipy-stubs",
]

[tool.spin]
package = 'scipy'

[tool.meson-python.args]
install = ['--skip-subprojects']

[tool.cibuildwheel]
skip = ["*_i686", "*_ppc64le", "*_s390x", "*_universal2"]
# We're only testing with essential test dependencies, not optional ones.
# Some of those require binary wheels (often missing for some platforms),
# or they slow down the test suite runs too much or simply aren't necessary.
test-requires = [
    "pytest",
    "pytest-xdist",
    "threadpoolctl",
    "pooch",
    "hypothesis",
]
before-build = "bash {project}/tools/wheels/cibw_before_build.sh {project}"
test-command = "bash {project}/tools/wheels/cibw_test_command.sh {project}"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

[tool.cibuildwheel.linux.environment]
# RUNNER_OS is a GitHub Actions specific env var; define it here so it's
# defined when running cibuildwheel locally
RUNNER_OS="Linux"
PKG_CONFIG_PATH = "/project/.openblas"

[tool.cibuildwheel.macos.environment]
PKG_CONFIG_PATH = "{project}"

[tool.cibuildwheel.windows]
repair-wheel-command = "bash ./tools/wheels/repair_windows.sh {wheel} {dest_dir}"

[tool.cibuildwheel.windows.environment]
# This does not work because pkg-config does not like backslashes,
PKG_CONFIG_PATH = "{project}"
# do this instead (which will override this setting)
# set CIBW_ENVIRONMENT_WINDOWS=PKG_CONFIG_PATH=PWD.replace('\\', '/')

[tool.spin.commands]
"Build & Develop" = [
  ".spin/cmds.py:build",
  ".spin/cmds.py:test",
  ".spin/cmds.py:mypy",
  ".spin/cmds.py:lint",
  ".spin/cmds.py:check",
  "spin.cmds.pip.install"
]
"Environments" = [
  "spin.cmds.meson.run",
  ".spin/cmds.py:python",
  ".spin/cmds.py:ipython",
  ".spin/cmds.py:shell",
  "spin.cmds.meson.gdb",
  "spin.cmds.meson.lldb"
]
"Documentation" = [
  ".spin/cmds.py:docs",
  ".spin/cmds.py:smoke_docs",
  ".spin/cmds.py:refguide_check",
  ".spin/cmds.py:smoke_tutorials"
]
"Release" = [
  ".spin/cmds.py:notes",
  ".spin/cmds.py:authors"
]
"Metrics" = [".spin/cmds.py:bench"]
